Fix quote and citation HTML and output whitespace correctness

--- a/Vivelin.Home/wwwroot/css/_elements.scss
+++ b/Vivelin.Home/wwwroot/css/_elements.scss
@@ -25,3 +25,17 @@ ul.icon-list {
     height: 32px;
     vertical-align: bottom;
 }
+
+figure.quote {
+    margin-left: 1em;
+    margin-right: 1em;
+
+    blockquote {
+        margin-left: 0;
+        margin-right: 0;
+    }
+    
+    figcaption:before {
+        content: '—';
+    }
+}
